fixed preloader on mobile

--- a/public/css/login.css
+++ b/public/css/login.css
@@ -47,7 +47,14 @@ body {
 
 .container{
   text-align: center;
+  margin-left: calc(50% - 100px);
+  margin-top: calc(50vh - 81px);
   width: 200px;
+}
+
+.app-wrapper {
+  width: 100%;
+  height: 100%;
 }
 
 a {
